# screener

./: .editorconfig  .gitignore  README.md  index.js  package-lock.json  package.json  symbol.list
analyse/: README.md  bear_engolf.py  bear_engulf.py  bftb.py  engulfing_pattern.py  from_bar_diffs.py  helpers.py  historical_vol.py  inside_bar.py  main.py  prices_diff.py  pyproject.toml  requirements.txt  supertrend.py  tr_atr.py
python/: bftb.py  from_bar_diffs.py  helpers.py  indicators.py  inside_bar.py  main.py  prices_diff.py  requirements.txt  supertrend.py  tr_atr.py
tools/: README-FIRST.md  json-to-csv.sh
