[tool.poetry]
name = "analyse"
version = "0.1.0"
description = ""
authors = ["Vassilis Vatikiotis <vvatikiotis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
pandas-ta = "^0.3.14-beta.0"
TA-Lib = "^0.4.24"
numpy = "^1.22.3"
tabulate = "^0.8.9"
matplotlib = "^3.5.1"
termcolor = "^1.1.0"
sty = "^1.0.4"
Bottleneck = "^1.3.4"
numexpr = "^2.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
